<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".MainActivity" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dp" >

		<TextView
			android:id="@+id/textViewStatus"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/textview_status" />

		<TextView
			android:id="@+id/textView_status"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/no_activity" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dp" >

		<TextView
			android:id="@+id/textViewAverage"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/textview_average" />

		<TextView
			android:id="@+id/textView_average"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dp" >

		<TextView
			android:id="@+id/textViewVariance"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/textview_variance" />

		<TextView
			android:id="@+id/textView_variance"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dp" >

		<TextView
			android:id="@+id/textViewFrequency"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/textview_frequency" />

		<TextView
			android:id="@+id/textView_frequency"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>

	<CheckBox
		android:id="@+id/checkBoxTalkback"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/talkback" />

	<CheckBox
		android:id="@+id/checkBoxBeep"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/beep" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dp" >

		<TextView
			android:id="@+id/textViewState"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/textview_current_state" />

		<TextView
			android:id="@+id/textView_state"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>

	<EditText
		android:id="@+id/editTextLog"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:autoLink="all"
		android:background="@+drawable/border"
		android:clickable="false"
		android:cursorVisible="false"
		android:ems="10"
		android:focusable="false"
		android:focusableInTouchMode="false"
		android:inputType="textMultiLine"
		android:isScrollContainer="true"
		android:longClickable="false"
		android:scrollbars="vertical" >

		<requestFocus />
	</EditText>

</LinearLayout>